# lakehouse-as-code

./: .gitignore  CLAUDE.md  README.md
.run/: azure-dev.run.xml  conf-dev.run.xml  conf-prd.run.xml  laktory-preview.yml  uc.run.xml  wf-dev.run.xml  wf-prd.run.xml  ws-dev.run.xml  ws-prd.run.xml
account/: requirements.txt  stack.yaml
aws-infra/: Pulumi.yaml  __main__.py  requirements.txt
azure-infra/: .gitignore  Pulumi.yaml  __main__.py  requirements.txt
cloud-infra/: Pulumi.yaml
dab-workflows/: .gitignore  databricks.yml  pyproject.toml
databricks-account/: Pulumi.global.yaml  Pulumi.yaml  __main__.py  __main__uc.py  requirements.txt
databricks-workspace/: Pulumi.yaml  __main__.py  __main__wsconf.py  catalogs.yaml  serviceprincipals.yaml
gcp-infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  read_env.sh  requirements.txt
polars-pipeline/: pipeline.yaml  run_pipeline.py
unity-catalog/: Pulumi.yaml  README.md  __main__.py  _obsolete_main.py  catalogs.yaml  groups.yaml  requirements.txt  serviceprincipals.yaml  stack.yaml  users.yaml
workflows/: .gitignore  README.md  requirements.txt  stack.yaml
workflows-dab/: README.md  databricks.yml  pyproject.toml
workflows-dab/laktory/pipelines/: pl-stock-prices.yml  pl-taxi-trips.yml  pl-tpch.yml
workflows-dab/resources/: stock-prices.job.yml  taxi-trips.job.yml
workflows-dab/scripts/: debug_pl.py
workflows-dab/src/lake/: __init__.py  dataframe_ext.py
workflows-dab/tests/: sample_taxis_test.py
workspace-conf/: Pulumi.yaml  __main__.py  clusters.yaml  directories.yaml  initscripts.yaml  stack.yaml  (+4 more)
(+128 files in other folders)
